# ly-dashboard

./: .env.example  .gitignore  DEPLOY-ZEABUR.md  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/src/: main.py
db/: init.sql
screenshots/: take.js
sync/: Dockerfile  pyproject.toml
sync/src/: config.py  db.py  main.py  votes.py
sync/src/sources/: google_news.py  ly_govapi.py  ly_official.py
web/: Dockerfile  next.config.js  package.json
web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/app/legislators/: page.tsx
web/app/legislators/[name]/: page.tsx
web/app/parties/: page.tsx
web/app/votes/: page.tsx
web/app/votes/[id]/: page.tsx
web/components/: AttendanceChart.tsx  BillStatusPie.tsx  CommitteeHeatmap.tsx  InterpellationCloud.tsx  IvodGallery.tsx  KPICards.tsx  NewsTimeline.tsx
web/lib/: api.ts
