[project]
name = "ly-sync"
version = "0.1.0"
description = "LY dashboard data sync"
requires-python = ">=3.11"
dependencies = [
  "httpx==0.27.2",
  "sqlalchemy==2.0.36",
  "psycopg[binary]==3.2.3",
  "pydantic==2.9.2",
  "feedparser==6.0.11",
  "python-dateutil==2.9.0.post0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
